Update files
Added APD URL and resource group restriction  based check in CatalogueClient class. Updated the unit tests and open api specs accordingly
